--- a/SimTECH/SimTECH/Pages/Leagues/ContractManager/Components/ManagerDropper.razor
+++ b/SimTECH/SimTECH/Pages/Leagues/ContractManager/Components/ManagerDropper.razor
@@ -1,5 +1,5 @@
 ﻿<MudDropContainer T="EditContract"
-                  @ref="dropzone"
+                  @ref="@dropzone"
                   Items="@_editableContracts"
                   ItemIsDisabled="@((contract) => contract.Id != 0)"
                   ItemsSelector="@((item, dropzone) => $"{item.TeamId}" == dropzone)"
@@ -55,13 +55,13 @@
                                          Min="1"
                                          Disabled="@(!context.Editing)"
                                          Class="dense-field" />
-                        <MudToggleIconButton Size="Size.Small"
+                        <MudToggleIconButton @bind-Toggled="context.Editing"
+                                             Size="Size.Small"
                                              Icon="@Icons.Material.Filled.Edit"
                                              Title="Edit"
                                              ToggledSize="Size.Small"
                                              ToggledIcon="@Icons.Material.Filled.Save"
                                              ToggledTitle="Save"
-                                             @bind-Toggled="context.Editing"
                                              Class="@ToggleButtonClass(context)">
                         </MudToggleIconButton>
                     </MudStack>
