--- a/SimTECH/SimTECH/Pages/Traits/Assignment/Dialogs/AssignmentResult.razor
+++ b/SimTECH/SimTECH/Pages/Traits/Assignment/Dialogs/AssignmentResult.razor
@@ -6,6 +6,7 @@
         <MudPaper>
             Here is where I would show the assignment results, if I had them!
         </MudPaper>
+        <MudText>Save if you want to save this, cancel for cancel culture.</MudText>
     </DialogContent>
     <DialogActions>
         <MudButton OnClick="Cancel">Cancel</MudButton>
