Got a magnificent idea related to reality data providing

--- a/SimTECH/SimTECH/Pages/Climates/Index.razor
+++ b/SimTECH/SimTECH/Pages/Climates/Index.razor
@@ -14,7 +14,8 @@
             <MudButton Variant="Variant.Outlined"
                        Color="Color.Secondary"
                        Size="Size.Small"
-                       OnClick="GetRandomClimate">
+                       OnClick="GetRandomClimate"
+                       Class="btn-md">
                 Random
             </MudButton>
             @if (randomClimate != null)
@@ -29,7 +30,8 @@
                        Size="Size.Small"
                        StartIcon="@Icons.Material.Filled.Add"
                        IconSize="Size.Small"
-                       OnClick="AddItem">
+                       OnClick="AddItem"
+                       Class="btn-md">
                 New
             </MudButton>
         </MudStack>
