--- a/SimTECH/SimTECH/Pages/Entrants/Engines/Index.razor
+++ b/SimTECH/SimTECH/Pages/Entrants/Engines/Index.razor
@@ -14,7 +14,7 @@
             <MudText Typo="Typo.h3">Engines</MudText>
             <MudSpacer />
             <MudButtonGroup Variant="Variant.Outlined" Color="Color.Tertiary" Size="Size.Small">
-                <MudButton OnClick="ToggleDisplayArchived" Class="btn-md">
+                <MudButton StartIcon="@Icons.Material.Filled.Archive" IconSize="Size.Small" OnClick="ToggleDisplayArchived" Class="btn-md">
                     @(showingArchived ? "Active" : "Archive")
                 </MudButton>
                 <MudButton StartIcon="@Icons.Material.Filled.Add" IconSize="Size.Small" OnClick="AddEngine" Class="btn-md">
