--- a/SimTECH/SimTECH/Pages/Extra/Index.razor
+++ b/SimTECH/SimTECH/Pages/Extra/Index.razor
@@ -21,6 +21,15 @@
 
                     <MudSpacer />
 
+                    <MudButtonGroup>
+                        <MudButton>Drivers</MudButton>
+                        <MudButton>Constructors</MudButton>
+                        <MudButton>Circuits</MudButton>
+                        <MudButton>Incidents</MudButton>
+                    </MudButtonGroup>
+
+                    <MudSpacer />
+
                     <MudButton FullWidth="true" Color="Color.Secondary" Variant="Variant.Text" OnClick="InsertDefault">Load default data</MudButton>
                 </MudPaper>
                 <MudPaper Class="pa-4 mud-height-full">
