--- a/SimTECH/SimTECH/Pages/Incidents/Index.razor
+++ b/SimTECH/SimTECH/Pages/Incidents/Index.razor
@@ -11,11 +11,11 @@
         <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-4">
             <MudText Typo="Typo.h3">Incidents</MudText>
             <MudSpacer />
-
-            <MudButton StartIcon="@Icons.Material.Filled.Add"
-                       IconSize="Size.Small"
-                       Variant="Variant.Outlined"
+            <MudButton Variant="Variant.Outlined"
                        Color="Color.Tertiary"
+                       Size="Size.Small"
+                       StartIcon="@Icons.Material.Filled.Add"
+                       IconSize="Size.Small"
                        OnClick="AddItem"
                        Class="btn-md">
                 New
