--- a/SimTECH/SimTECH/Pages/Traits/Dialogs/TraitEditor.razor
+++ b/SimTECH/SimTECH/Pages/Traits/Dialogs/TraitEditor.razor
@@ -32,7 +32,8 @@
                                          ThumbOffIcon="@Icons.Material.Filled.Close"
                                          Label="Only when conditions are wet"
                                          LabelPosition="LabelPosition.End"
-                                         Color="Color.Tertiary" />
+                                         Color="Color.Tertiary"
+                                         Class="my-2"/>
                         </div>
                     </MudStack>
                 </MudItem>
@@ -88,10 +89,9 @@
                     <MudRangeSlider @bind-Value="Model.RngMin"
                                     @bind-UpperValue="Model.RngMax"
                                     Size="Size.Large"
-                                    Variant="Variant.Outlined"
+                                    Variant="Variant.Filled"
                                     Range="true"
                                     TickMarks="true"
-                                    Display="true"
                                     Color="Color.Tertiary"
                                     Step="1"
                                     Min="-10"
