--- a/SimTECH/SimTECH/Pages/Traits/Index.razor
+++ b/SimTECH/SimTECH/Pages/Traits/Index.razor
@@ -17,7 +17,7 @@
             <MudSpacer />
 
             <MudButtonGroup Variant="Variant.Outlined" Color="Color.Tertiary" Size="Size.Small">
-                <MudButton StartIcon="@Icons.Material.Filled.Add"
+                <MudButton StartIcon="@Icons.Material.Filled.Archive"
                            IconSize="Size.Small"
                            OnClick="GoToTraitAssign"
                            Class="btn-md">
