--- a/SimTECH/SimTECH/Pages/Entrants/Tracks/Index.razor
+++ b/SimTECH/SimTECH/Pages/Entrants/Tracks/Index.razor
@@ -14,9 +14,13 @@
         <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-4">
             <MudText Typo="Typo.h3">Tracks</MudText>
             <MudSpacer />
-            <MudButtonGroup Variant="Variant.Outlined" Color="Color.Tertiary">
-                <MudButton OnClick="ToggleDisplayArchived" Class="btn-md">@(showingArchived ? "Active" : "Archive")</MudButton>
-                <MudButton StartIcon="@Icons.Material.Filled.Add" IconSize="Size.Small" OnClick="AddTrack" Class="btn-md">New</MudButton>
+            <MudButtonGroup Variant="Variant.Outlined" Color="Color.Tertiary" Size="Size.Small">
+                <MudButton StartIcon="@Icons.Material.Filled.Archive" IconSize="Size.Small" OnClick="ToggleDisplayArchived" Class="btn-md">
+                    @(showingArchived ? "Active" : "Archive")
+                </MudButton>
+                <MudButton StartIcon="@Icons.Material.Filled.Add" IconSize="Size.Small" OnClick="AddTrack" Class="btn-md">
+                    New
+                </MudButton>
             </MudButtonGroup>
         </MudStack>
     </MudPaper>
