--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/StandingsTab/ConstructorResults.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/StandingsTab/ConstructorResults.razor
@@ -1,15 +1,13 @@
 ﻿@using SimTECH.Pages.Seasons.Overview.Tabs.StandingsTab.Dialogs
 
-@inject IDialogService _dialog
-
 <MudTable Items="@StandingConstructors" Dense="true" id="wcc-season-results">
     <ToolBarContent>
         <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-4 mud-width-full">
-            <MudText Typo="Typo.h4">World Constructors Championship @(OverviewModel.Season.Year)</MudText>
+            <MudText Typo="Typo.h5">World Constructors Championship @(OverviewModel.Season.Year)</MudText>
             <MudSpacer />
-            <MudButtonGroup Color="Color.Secondary" Variant="Variant.Text">
+            <MudButtonGroup Color="Color.Tertiary" Variant="Variant.Text">
                 <MudIconButton Icon="@Icons.Material.Outlined.InsertChart" OnClick="ShowWccResultGraph" />
-                <ScreenshotIconButton TargetId="wcc-season-results" />
+                <ScreenshotIconButton TargetId="wcc-season-results" Colour="Color.Tertiary" />
             </MudButtonGroup>
         </MudStack>
     </ToolBarContent>
@@ -87,7 +85,7 @@
             lowestScoringPosition = OverviewModel.Season.PointAllotments.Max(e => e.Position);
     }
 
-    async Task ShowWccResultGraph()
+    private async Task ShowWccResultGraph()
     {
         await OnOpenWccChart.InvokeAsync();
     }
